<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_message">¡Bienvenido a Adivina el Escudo!</string>
    <string name="username_label">Usuario:</string>
    <string name="username_hint">Ingrese su usuario</string>
    <string name="password_label">Contraseña:</string>
    <string name="password_hint">Ingrese su contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="no_account_text">Si no dispone de cuenta, pulse aquí</string>
    <string name="register_link">aquí</string>
    <string name="idioma_español">Idioma (Español)</string>

</resources>